# 1brc

./: Cargo.toml
scripts/: benchmark.sh  benchmark_all.sh  profile.sh
src/: main.rs
